--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 </head>
 <body>
 
-<h1>🐾 Smart Pet Feeder & Envoriment</h1>
+<h1>🐾 Smart Pet Feeder & Enviroment</h1>
 
 <div class="main-layout">
     
@@ -310,4 +310,5 @@ db.ref('history').limitToLast(288).on('value', (snapshot) => {
 </script>
 
 </body>
+
 </html>
